tests/spec/emit/snapshots/import_single.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:io"
  import "go:fmt"
  
  fn test() {
    fmt.Print("Using imports")
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Using imports")
}
