tests/spec/emit/snapshots/import_with_usage.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:io"
  import "go:fmt"
  
  fn test() {
    let x = "hello";
    fmt.Print(x)
  }
---
package main

import "fmt"

func test() {
	x := "hello"
	fmt.Print(x)
}
