tests/spec/emit/snapshots/index_target_constructor_rhs_not_frozen.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Wrap(int)\n\nfn run() -> int {\n  let mut xs = [Wrap(0), Wrap(0)]\n  let i = 0\n  xs[i] = Wrap(5)\n  xs[0].0\n}\n"
---
package main

import "fmt"

type Wrap int

func (w Wrap) String() string {
	return fmt.Sprintf("Wrap(%v)", int(w))
}

func run() int {
	xs := []Wrap{Wrap(0), Wrap(0)}
	i := 0
	xs[i] = Wrap(5)
	return int(xs[0])
}
