tests/spec/emit/snapshots/indexed_access_assignment.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let mut xs = [1, 2, 3];
    xs[0] = 100;
    xs[0]
  }
---
package main

func test() int {
	xs := []int{1, 2, 3}
	xs[0] = 100
	return xs[0]
}
