tests/spec/emit/snapshots/indexed_field_assignment_no_temp_for_trivial_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Pos { x: int, y: int }
  
  struct Snake {
    parts: mut Slice<Pos>,
    head:  int
  }
  
  impl Snake {
    fn set_head(self: mut Ref<Snake>, x: int, y: int) {
      self.parts[self.head].x = x
      self.parts[self.head].y = y
    }
  }
---
package main

type Pos struct {
	x int
	y int
}

type Snake struct {
	parts []Pos
	head  int
}

func (s *Snake) setHead(x, y int) {
	s.parts[s.head].x = x
	s.parts[s.head].y = y
}
