tests/spec/emit/snapshots/indexed_lvalue_pins_base_before_call_index.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut xss = [[10, 11], [20, 21]]
    let mut i = 0
    let bump = || -> int { i += 1; i }
    xss[i][bump()] = 9
    let _ = xss
  }
---
package main

func main() {
	xss := [][]int{{10, 11}, {20, 21}}
	i := 0
	bump := func() int {
		i++
		return i
	}
	base := xss[i]
	base[bump()] = 9
	_ = xss
}
